src/test/testData/parser/good/StatementAsm.basic
Asm(prgmTEST
Asm(prgmAtheta1)