src/test/testData/parser/bad/StatementAsm.basic
Asm
Asm(
Asm(A
Asm()